--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Yello! This is BooBoo.
         </div>
-        <script type="text/javascript" src="main.js">
+        <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
