--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,4 +1,29 @@
 <html>
-<head></head>
-<body></body
+<head>
+    <title>Article One</title>
+</head>
+<body>
+    <div>
+        <a href="/">Home</a>
+    </div>
+    <hr>
+    <h3>This is Article One</h3>
+    <div>
+        Julr 25,2017
+    </div>
+    <div>
+        <p>Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles. Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles.
+        </p>
+    </div>
+    
+    <div>
+        <p>Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles. Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles.
+        </p>
+    </div>
+    
+    <div>
+        <p>Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles. Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles.
+        </p>
+    </div>
+</body>
 </html>
