[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         .container{
             max-width:600px;
             margin: 0 auto;
-            font: Sans-serif;
+            font: sans-serif;
             color:grey;
         }
     </style>
