[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
         .container{
-            max-width:600px;
+            max-width: 600px;
             margin: 0 auto;
-            font: sans-serif;
-            color:grey;
+            font: Sans-serif;
+            color: #476c94;
+            padding: 1.2%;
         }
     </style>
 </head>
