[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,15 +2,7 @@
 <head>
     <title>Article One</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <style>
-        .container{
-            max-width: 600px;
-            margin: 0 auto;
-            font: Sans-serif;
-            color: #476c94;
-            padding: 1.2%;
-        }
-    </style>
+    <link href="/ui/style.css" rel="stylesheet"/>
 </head>
 <body>
     <div class="container">
