--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,6 +5,7 @@
     <link href="/ui/style.css" rel="stylesheet"/>
 </head>
 <body>
+    <div class="container">
     <div>
         <a href="/">Home</a>
     </div>
@@ -26,6 +27,7 @@
     <div>
         <p>Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my second Article and will be copied multiple times right in the page as where as in other two articles. Lorem ipsum is the best way, but there is nothing here so I'll say that this is the content for my first Article and will be copied multiple times right in the page as where as in other two articles.
         </p>
+    </div>
     </div>
 </body>
 </html>
