--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,15 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id="main-text" class="center text-big bold">
+        <h3>Personal</h3>
+        <div>
             Yello! This is BooBoo.
         </div>
+        <h3>Professional</h3>
+        <div>
+            I work nowhere.
+        </div>
+        <div class="footer"></div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
