--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,9 @@
             I work nowhere.
         </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            This <button id="counter" >BUTTon</button> has been 'touched' <span id='count'>0</span> times.
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
